add multi-tal dashboard

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,13 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  font_awesome_flutter: ^10.8.0
+  go_router: ^13.0.1   # use latest version if available
+  google_fonts: ^6.1.0 # or the latest version
   flutter:
     sdk: flutter
   fluttertoast: ^8.2.4
+  flutter_animate: ^4.2.0
   http: ^1.4.0
 dependency_overrides:
   intl: any
